@@ -1,3 +1,8 @@
+2007-07-16  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/AccountManagement.cs: Added code to grab an existing gabble
+	  connection if it exists
+
 2007-07-16  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/PersonCard.cs: Removed un-needed spaces
